--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,14 @@ dependencies {
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
+    maven {
+        url 'https://maven.google.com'
+    }
 }
